# sc-assignments

./: .gitattributes  .gitignore  README.md  pyproject.toml
k1/: super_coin_counter.py
k2/: bones_patrol.py
k3/data/: texts.csv
