[project]
name = "assignments"
version = "2026.1"
description = "Assignments for the Soft Computing course at FTN."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-contrib-python",
    "pandas",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
]
